@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.6 2003/01/10 20:20:53 jlam Exp $
+$NetBSD: distinfo,v 1.7 2003/06/26 23:04:25 jlam Exp $
 
-SHA1 (oss397g-netbsd-v1.6.tar.gz) = 9ae61d38e0eb35474cbb84498c53f82b7e717d4f
-Size (oss397g-netbsd-v1.6.tar.gz) = 1116013 bytes
+SHA1 (oss397j-netbsd-v1.6.1.tar.gz) = add7976db3882fc4b33c67e0720eb82ae5576b09
+Size (oss397j-netbsd-v1.6.1.tar.gz) = 1131970 bytes
