@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2596 2003/06/26 22:47:13 wulf Exp $
+$NetBSD: CHANGES,v 1.2597 2003/06/26 23:05:09 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2578,3 +2578,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated scsh to 0.6.4 [dillo 2003-06-26]
 	Added dqs-3.3.2 [agc 2003-06-26]
 	Added hamlib-1.1.4 [wulf 2003-06-27]
+	Updated oss-3.9.7j [jlam 2003-06-27]
